Fix for bottom margin for homepage/dashlets on mobile view.

--- a/themes/suiteresponsive/css/style.css
+++ b/themes/suiteresponsive/css/style.css
@@ -4821,6 +4821,7 @@ li#moremenu {
     /* Responsive dashlet styles */
     #pageContainer {
         width:100%;
+        margin: 0 0 50px 0;
     }
     .dashletContainer{
         float:left;
